# logguard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-k8s.py  run.py
backend/: config.py
backend/alerting/: n8n.py  slack.py
backend/api/: main.py  routes.py
backend/engine/: consumer.py  detector.py  models.py
backend/producer/: generator.py
docs/: index.html  style.css
frontend/: app.js  index.html  style.css
k8s/: backend.yaml  n8n.yaml  redis.yaml
log_guard/: __init__.py  config.py
log_guard/alerting/: slack.py
log_guard/api/: main.py  routes.py  websocket.py
log_guard/engine/: consumer.py  detector.py
log_guard/producer/: generator.py
tests/: test_detector.py  test_generator.py
